oauth1-request-derive/tests/ui/fallback_impl.stderr
error: unknown attribute `unknown`
 --> tests/ui/fallback_impl.rs:3:14
  |
3 |     #[oauth1(unknown)]
  |              ^^^^^^^
